--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "scripts": {
   "start": "node server.js"
   },
+  "engines": {
+  "node": ">=18.18.0 <19.0.0"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
